refactor(userdetails): to return email and phone instead of only system. debug(tests): updated tests according to updated code for email and phone return.
Signed-off-by: Vinay2080 <shaking.121@gmail.com>